# TriFMatch

./: CMakeLists.txt  README.md
configuration/: config.h
dataset/: README.md
datasets/: README.md
datasets/dblp/dense/: query_40_105  query_40_106  query_40_107  query_40_109  query_40_110  query_40_111  query_40_112  query_40_113  query_40_114  query_40_115  query_40_116  query_40_118  query_40_12  query_40_120  query_40_122  query_40_123  query_40_125  query_40_127  query_40_128  query_40_129  query_40_130  query_40_132  query_40_133  query_40_134  query_40_136  query_40_137  query_40_138  query_40_139  query_40_141  query_40_142  query_40_144  query_40_145  query_40_146  query_40_147  query_40_15  query_40_150  query_40_151  query_40_152  query_40_153  query_40_155  (+353 more)
datasets/dblp/sparse/: query_40_0  query_40_102  query_40_103  query_40_105  query_40_107  query_40_11  query_40_111  query_40_112  query_40_114  query_40_115  query_40_117  query_40_12  query_40_121  query_40_122  query_40_125  query_40_126  query_40_128  query_40_129  query_40_130  query_40_131  query_40_134  query_40_135  query_40_136  query_40_138  query_40_139  query_40_141  query_40_142  query_40_143  query_40_144  query_40_146  query_40_147  query_40_148  query_40_151  query_40_155  query_40_156  query_40_158  query_40_16  query_40_164  query_40_165  query_40_166  (+349 more)
datasets/eu2005/dense/: query_40_0  query_40_1  query_40_100  query_40_102  query_40_103  query_40_105  query_40_106  query_40_107  query_40_109  query_40_110  query_40_111  query_40_112  query_40_113  query_40_114  query_40_115  query_40_117  query_40_12  query_40_120  query_40_123  query_40_125  query_40_127  query_40_128  query_40_129  query_40_13  query_40_130  query_40_134  query_40_135  query_40_136  query_40_140  query_40_144  query_40_145  query_40_146  query_40_148  query_40_150  query_40_152  query_40_153  query_40_155  query_40_158  query_40_160  query_40_163  (+366 more)
datasets/eu2005/sparse/: query_40_1  query_40_101  query_40_106  (+369 more)
graph/: CMakeLists.txt  graph.cpp  graph.h
src/: CMakeLists.txt  candidates_recorder.cpp  candidates_recorder.h  containment_filter.cpp  containment_filter.h  main.cpp  preprocessor.cpp  preprocessor.h  query_plan_generator.cpp  query_plan_generator.h  subgraph_enumeration.cpp  subgraph_enumeration.h  subtree_reducer.cpp  subtree_reducer.h  successor_equivalent_cache.cpp  successor_equivalent_cache.h  trie_encoder.cpp  trie_encoder.h
utility/: CMakeLists.txt  QFilter.h  computesetintersection.cpp  computesetintersection.h  graphoperations.cpp  graphoperations.h  utils.cpp  utils.h
utility/nucleus_decomposition/: CMakeLists.txt  nd_interface.h
utility/primitive/: nlf_filter.h  projection.h  scan.h  semi_join.h
utility/relation/: catalog.cpp  catalog.h  edge_relation.h
(+11241 files in other folders)
